# Loxoc-Python3D-Game-Engine

./: .envexample  .gitignore  LICENSE  MANIFEST.in  default_fragment.glsl  default_vertex.glsl  pyproject.toml  readme.md  renderer.pxd  renderer.pyi  renderer.pyx  requirements.txt  setup.py  test.py  test_cam.py  vcpkg.json
.github/vcpkg/: vcpkg.json
.github/workflows/: python-publish.yml
Loxoc/: __init__.py  core.pxd  core.pyi  core.pyx  default_fragment.glsl  default_fragment_2D.glsl  default_fragment_particle.glsl  default_fragment_skybox.glsl  default_fragment_text.glsl  default_geometry_particle.glsl  default_vertex.glsl  default_vertex_2D.glsl  default_vertex_animated.glsl  default_vertex_particle.glsl  default_vertex_skybox.glsl  default_vertex_text.glsl
Runespoor/: __init__.py  core.pxd  core.pyi  core.pyx  default_fragment.glsl  default_fragment_2D.glsl
docs/: conf.py  index.rst  quick_start.rst
glad/include/glad/: gl.h
src/: Animation.cpp  Animation.h  Bone.h  Camera.cpp  Camera.h  Colliders.cpp  Colliders.h  CubeMap.cpp  CubeMap.h  DirectionalLight.cpp  DirectionalLight.h  Emitter.cpp  Emitter.h  Event.cpp  Event.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Object2d.cpp  Object2d.h  Object3d.cpp  Object3d.h  Octree.cpp  Octree.h  PointLight.cpp  PointLight.h  Quaternion.cpp  Quaternion.h  RC.cpp  RC.h  Shader.cpp  Shader.h  Sound.cpp  (+22 more)
