[build-system]
requires = ["wheel", "Cython", "setuptools", "pkgconfig"]
build-backend = "setuptools.build_meta"

[project]
name = "Loxoc"
dynamic = ["version", "description","readme","license","authors","keywords","classifiers"]

[project.urls]
"Documentation" = "https://frewtypebbles.github.io/"
"Bug Reports" = "https://github.com/FrewtyPebbles/Loxoc-Python3D-Game-Engine/issues"
"Source" = "https://github.com/FrewtyPebbles/Loxoc-Python3D-Game-Engine"

[tool.setuptools.dynamic]
version = {attr = "setup.VERSION"}